--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
-        <!--features will enjoy-->
-        <section>
-        </section>
         <!--Some facts-->
         <section class="some-facts">
             <h3 class="section-title">Some Facts</h3>
@@ -77,6 +74,20 @@
                         <h5 class="fact-name">Email Send</h5>
                     </div>
                 </div>
+            </div>
+        </section>
+        <!--Our Sponsors-->
+        <section class="our-sponsors">
+            <div class="sponsors-info">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
             </div>
         </section>
     </main>
