--- a/index.html
+++ b/index.html
@@ -41,6 +41,39 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!--Features Section Start-->
+        <section class="features display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+                <!--feature card container-->
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="featured-architect">
+                <img src="images/architect.png" alt="">
+                <button class="btn-primary" id="experience-badge">
+                    <span id="experience-year">10+ Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+        </section>
         <!--Some facts-->
         <section class="some-facts">
             <h3 class="section-title">Some Facts</h3>
